@@ -1,4 +1,3 @@
-//Auto-generated by kalyptus. DO NOT EDIT.
 namespace PlasmaScripting {
 	using Plasma;
 	using System;
@@ -19,7 +18,9 @@ namespace PlasmaScripting {
 	///   See <see cref="IAppletSignals"></see> for signals emitted by Applet
 	/// </remarks>		<short> The base Applet class.</short>
 	public class Applet : QObject, IDisposable {
+		private KimonoAppletScript.Applet appletScript;
 		private Plasma.Applet applet;
+
 		public Plasma.Applet Applet {
 			get { return applet; }
 		}
@@ -306,7 +307,6 @@ namespace PlasmaScripting {
 		/// <remarks>
 		///  Reimplemented from QGraphicsItem
 		/// </remarks>		<short>    Reimplemented from QGraphicsItem </short>
-		[SmokeMethod("type() const")]
 		public int type() {
 			return applet.type();
 		}
@@ -344,21 +344,6 @@ namespace PlasmaScripting {
 		///          </remarks>		<short>    un-associate actions from this widget, including ones added after this call.</short>
 		public virtual void RemoveAssociatedWidget(QWidget widget) {
 			return applet.RemoveAssociatedWidget(widget);
-		}
-		/// <remarks>
-		/// <param> name="parent" the QGraphicsItem this applet is parented to
-		/// </param><param> name="serviceId" the name of the .desktop file containing the
-		///       information about the widget
-		/// </param><param> name="appletId" a unique id used to differentiate between multiple
-		///       instances of the same Applet type
-		///          </param></remarks>		<short>   </short>
-		public Applet(QGraphicsItem parent, string serviceId, uint appletId) : this((Type) null) {
-		}
-		public Applet(QGraphicsItem parent, string serviceId) : this((Type) null) {
-		}
-		public Applet(QGraphicsItem parent) : this((Type) null) {
-		}
-		public Applet() : this((Type) null) {
 		}
 		/// <remarks>
 		///  Sets the immutability type for this applet (not immutable, user immutable or system immutable)
@@ -421,16 +406,13 @@ namespace PlasmaScripting {
 		[Q_SLOT("void init()")]
 		public virtual void Init() {
 		}
-		/// <remarks>
-		///  This constructor is to be used with the plugin loading systems
-		///  found in KPluginInfo and KService. The argument list is expected
-		///  to have two elements: the KService service ID for the desktop entry
-		///  and an applet ID which must be a base 10 number.
-		/// <param> name="parent" a QObject parent; you probably want to pass in 0
-		/// </param><param> name="args" a list of strings containing two entries: the service id
-		///       and the applet id
-		///          </param></remarks>		<short>    This constructor is to be used with the plugin loading systems  found in KPluginInfo and KService.</short>
-		public Applet(QObject parent, List<QVariant> args) : this((Type) null) {
+		public Applet(KimonoAppletScript.Applet parent) : base(parent) {
+			appletScript = parent;
+			applet = parent.Applet();
+			Connect(applet, SIGNAL("releaseVisualFocus()"), this, SIGNAL("releaseVisualFocus()"));
+			Connect(applet, SIGNAL("geometryChanged()"), this, SIGNAL("geometryChanged()"));
+			Connect(applet, SIGNAL("configNeedsSaving()"), this, SIGNAL("configNeedsSaving()"));
+			Connect(applet, SIGNAL("activate()"), this, SIGNAL("activate()"));
 		}
 		/// <remarks>
 		///  Call this method when the applet fails to launch properly. An
