@@ -1,4 +1,10 @@
 2008-07-02  Richard Dale  <richard.j.dale@gmail.com>
+* Added a PlasmaScripting.DataEngine class, which will be part of the main
+  plasma .dll, and two classes 'KimonoAppletScript.DataEngine' and 
+  'KimonoAppletScript.Applet' for implementing the ScriptEngine plugins for 
+  Applets and DataEngines
+
+2008-07-02  Richard Dale  <richard.j.dale@gmail.com>
 * Added a PlasmaScripting.Applet class which will be subclassed to implement
   ScriptEngine based C# plasmoids. The Plasma.Applet source was copied and
   enums and static methods were removed. The code in the public methods was
